--- a/bower.json
+++ b/bower.json
@@ -7,5 +7,8 @@
     "animate.css": "latest",
     "angular": "latest",
     "angular-route": "latest"
+  },
+  "devDependencies": {
+    "firebase": "^3.2.0"
   }
 }
