--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular-route": "latest"
   },
   "devDependencies": {
-    "firebase": "^3.2.0"
+    "firebase": "^3.2.0",
+    "angular-materialize": "^0.1.9"
   }
 }
