--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "./node_modules/bower/bin/bower install"
+  },
+  "engines": {
+    "node": "4.2.4",
+    "npm": "2.14.12"
   },
   "repository": {
     "type": "git",
@@ -23,7 +28,8 @@
     "mongodb": "^2.1.18",
     "mongoose": "^4.5.2",
     "morgan": "^1.7.0",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "bower": "^1.7.9"
   },
   "devDependencies": {
     "bower": "^1.7.9",
